[tool.poetry]
name = "streamlit-chatgpt"
version = "0.1.0"
description = ""
authors = ["h-k-nyosu <kuro.h1020@gmail.com>"]
readme = "README.md"
packages = [{include = "streamlit_chatgpt"}]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.20.0"
openai = "^0.27.1"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
